refactor(ChessBoardInitializer): 수정된 ChessBoard 에 맞도록 보드 판을 초기화하는 방법 수정
- 만들어진 보드 판의 구성에 대한 테스트 작성